# Valuation-Agent-api

./: .cursorrules  Dockerfile  Makefile  README.md  app.py  generate_sdk.py  main.py  minimal_app.py  pyproject.toml  requirements.txt  run_api.py  start_api.py  startup.py  startup_backend.py  startup_simple.py  web.config
.github/workflows/: main_valuation-backend-api.yml
app/: main.py  settings.py
app/core/: __init__.py  daycount.py  models.py  schedule_utils.py  schedules.py
app/core/curves/: __init__.py  base.py  forward.py  fx.py  ois.py
app/core/exporters/: excel.py
app/core/fx/: __init__.py  forwards.py
app/core/governance/: __init__.py  ifrs13.py
app/core/marketdata/: __init__.py  adapters.py  types.py
app/core/models/: legs.py  schedules.py
app/core/models_old/: __init__.py  legs.py
app/core/pricing/: __init__.py  ccs.py  irs.py  irs_quantlib.py
app/core/schedules/: __init__.py  calendar.py  daycount.py  schedule_builder.py
app/core/validation/: math_invariants.py  quant_review.py
app/core/xva/: simple.py
app/data/: catalog.py  validation.py
app/data/samples/: eur_ois.csv  fx_quotes.csv  fx_usd_eur.csv  usd_ois.csv  usd_ois_quotes.csv  usd_sofr_depos.csv
app/models/: __init__.py  hw1f.py
app/risk/: __init__.py  sensitivities.py
app/routers/: curves.py  exports.py  health.py  marketdata.py  runs.py  runs_simple.py  sensitivities.py  validation.py
app/schemas/: instrument.py  run.py
app/validators/: math.py
app/xva/: __init__.py  simple.py
examples/: Quant_Review_Guide.md  README.md  generate_examples.py
tests/: test_ccs_basic.py  test_golden.py  test_irs_basic.py  test_quantlib_irs.py  test_run_flow.py  test_schedule_daycount.py  test_sensitivities.py  test_validators.py  test_xva.py
tests/snapshots/: standard_ccs_usd_eur.json  standard_irs_2y_5pct.json
